--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+    {% load filtros %}
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,15 @@
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous">
+            <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"></script>
+
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +53,7 @@
         {% if messages %}
         {% for message in messages %}
         <div
-            class="alert alert-{{message.tags}} alert-dismissible fade show fadeOut"
+            class="alert alert-{{ message.tags | calcular_clase }} alert-dismissible fade show fadeOut"
             role="alert">
             <strong>Aviso:</strong> {{ message }}.
             <button type="button" class="btn-close"
@@ -62,18 +72,13 @@
 
         {% endblock %}
         
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-        <script
-            src="https://code.jquery.com/jquery-3.7.1.min.js"
-            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-            crossorigin="anonymous"></script>
-        <script>
 
-    
+{% block js %}
+<script>
+    setTimeout(function(){
+        $('.fade').fadeOut(1500);
+    },3000)
   </script>
-
+{% endblock %}
     </body>
 </html>
