Habilitación de formulario para editar inmuebles

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+
+<div class="container">
 <h2>Página inicial</h2>
 <p>Solo para usuarios autentificados</p>
+
+</div>
+
+
 {% endblock %}
