--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,7 +10,7 @@
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous">
-            <script
+        <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
@@ -19,66 +19,92 @@
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
             crossorigin="anonymous"></script>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-            rel="stylesheet">
-        <link
-            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet">
 
-        
+        <style>
+
+            body{
+                font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  height: 100%;
+            }
+
+            p{
+  font-weight: 16px;
+  font-style: normal;
+            }
+            
+            .wrapper{
+                display: flex;
+                flex-direction: column;
+                min-height: 100vh;
+            }
+            main{
+                flex:1;
+                padding: 20px
+            }
+
+            </style>
+
         {% block css %}
 
         {% endblock %}
 
-
     </head>
     <body>
+        <div class="wrapper">
+            {% block nav %}
 
+            {% include 'parts/navbar.html' %}
 
-                {% block nav %}
+            {% endblock %}
 
-                {% include 'parts/navbar.html' %}
+            {% block header %}
 
-                {% endblock %}
+            {% endblock %}
 
-                {% block header %}
+            <main>
 
-                {% endblock %}
+            
 
+            {% if messages %}
+            {% for message in messages %}
+            <div
+                class="alert alert-{{ message.tags | calcular_clase }} alert-dismissible fade show fadeOut"
+                role="alert">
+                <strong>Aviso:</strong> {{ message }}.
+                <button type="button" class="btn-close"
+                    data-bs-dismiss="alert"
+                    aria-label="Close"></button>
+            </div>
+            {% endfor %}
+            {% endif %}
 
-        {% if messages %}
-        {% for message in messages %}
-        <div
-            class="alert alert-{{ message.tags | calcular_clase }} alert-dismissible fade show fadeOut"
-            role="alert">
-            <strong>Aviso:</strong> {{ message }}.
-            <button type="button" class="btn-close"
-                data-bs-dismiss="alert"
-                aria-label="Close"></button>
-        </div>
-        {% endfor %}
-        {% endif %}
-        <div class="col">
             {% block content %}
+
+            {% endblock %}
+
+</main>
+
+            {% block footer %}
+            {% include 'parts/footer.html' %}
 
             {% endblock %}
         </div>
 
-        {% block footer %}
-
-        {% endblock %}
-        
-
-{% block js %}
-<script>
+        {% block js %}
+        <script>
     setTimeout(function(){
         $('.fade').fadeOut(1500);
     },3000)
   </script>
-{% endblock %}
+        {% endblock %}
     </body>
 </html>
