Habilitación de formulario para crear usuario

--- a/main/templates/parts/navbar.html
+++ b/main/templates/parts/navbar.html
@@ -30,7 +30,7 @@
   
               {% else %}
               <a class="btn btn-primary mx-1"
-                href="#">Regístrate</a>
+                href="{% url 'nuevo_usuario' %}">Regístrate</a>
               <a href="#" class="btn btn-primary mx-1">Login</a>
               {% endif %}
             </div>
