--- a/main/templates/detalle_inmueble.html
+++ b/main/templates/detalle_inmueble.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
-{% load custom_filters %}
+{% load filtros %}
 {% block content %}
 
 <div class="container">
